Refactor OIDC Avatar Handling
- Removed the avatarFieldName configuration option, defaulting to the standard OIDC  claim for avatar URLs.
- Introduced a new configuration option, useMicrosoftGraphForAvatar, to enable fetching avatars from Microsoft Graph when the  claim is unavailable.
- Updated MicrosoftGraphAvatarFetcher to handle avatar retrieval and validation more robustly.
- Enhanced OicAvatarProperty to include security headers and improved data URL validation.
- Removed deprecated tests related to avatar field handling and added new tests for Microsoft Graph integration.
- Updated documentation to reflect changes in avatar configuration and usage.

Signed-off-by: Venkata Shreyas Kabekkodu <venkatashreyas.kabekkodu@fmr.com>